--- a/NELSON.css
+++ b/NELSON.css
@@ -1,19 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap");
 .head {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   text-align: justify;
   text-decoration: underline;
   text-shadow: #48483a;
-  color: khaki;
+  color: rgb(131, 119, 10);
 }
 .head2 {
-  padding-top: 20px;
+  padding-top: 80px;
 }
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 900;
+  font-weight: bolder;
   background-color: cornsilk;
 }
 .Nelson {
